--- a/no_ecs/Cargo.toml
+++ b/no_ecs/Cargo.toml
@@ -7,3 +7,16 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+lto = true
+opt-level = 3
+codegen-units = 1
